--- a/Moving Sensor Node/include/README
+++ b/Moving Sensor Node/include/README
@@ -1,5 +1,5 @@
 
-PINOUT ESP32 UTILIZADOS NO TRABALHO DE AGRICULTURA DE PRECISÃO - PLANTA VISION - ALINE MBS 2024
+PINOUT ESP32 UTILIZADOS NO TRABALHO DE AGRICULTURA DE PRECISÃO - MWSN - ALINE MBS 2024
 
 PIN 4 - TEMPERATURA
 PIN 36 - HUMIDADE
